libfreefare/freefare.h

enum freefare_tag_type {
    FELICA,
    MIFARE_MINI,
    MIFARE_CLASSIC_1K,
    MIFARE_CLASSIC_4K,
    MIFARE_DESFIRE,
//    MIFARE_PLUS_S2K,
//    MIFARE_PLUS_S4K,
//    MIFARE_PLUS_X2K,
//    MIFARE_PLUS_X4K,
    MIFARE_ULTRALIGHT,
    MIFARE_ULTRALIGHT_C,
    NTAG_21x,
};
struct freefare_tag;
typedef struct freefare_tag *FreefareTag;
struct mifare_desfire_key;
typedef struct mifare_desfire_key *MifareDESFireKey;
struct ntag21x_key;
typedef struct ntag21x_key *NTAG21xKey;
typedef uint8_t MifareUltralightPageNumber;
typedef unsigned char MifareUltralightPage[4];
FreefareTag	*freefare_get_tags(nfc_device *device);
FreefareTag	 freefare_tag_new(nfc_device *device, nfc_target target);
enum freefare_tag_type freefare_get_tag_type(FreefareTag tag);
const char	*freefare_get_tag_friendly_name(FreefareTag tag);
char		*freefare_get_tag_uid(FreefareTag tag);
int              freefare_get_tag_uid_raw(FreefareTag tag, uint8_t** uid);
nfc_target      *freefare_get_tag_target(FreefareTag tag);
void		 freefare_free_tag(FreefareTag tag);
void		 freefare_free_tags(FreefareTag *tags);
bool		 freefare_selected_tag_is_present(nfc_device *device);
void		 freefare_set_tag_timeout(FreefareTag tag, int timeout);
const char	*freefare_version(void);
const char	*freefare_strerror(FreefareTag tag);
int		 freefare_strerror_r(FreefareTag tag, char *buffer, size_t len);
void		 freefare_perror(FreefareTag tag, const char *string);


bool		 felica_taste(nfc_device *device, nfc_target target);
FreefareTag	 felica_tag_new(nfc_device *device, nfc_target target);
void		 felica_tag_free(FreefareTag tag);
ssize_t		 felica_read(FreefareTag tag, uint16_t service, uint8_t block, uint8_t *data, size_t length);
ssize_t		 felica_read_ex(FreefareTag tag, uint16_t service, uint8_t block_count, uint8_t blocks[], uint8_t *data, size_t length);
ssize_t		 felica_write(FreefareTag tag, uint16_t service, uint8_t block, uint8_t *data, size_t length);
ssize_t		 felica_write_ex(FreefareTag tag, uint16_t service, uint8_t block_count, uint8_t blocks[], uint8_t *data, size_t length);


bool		 mifare_ultralight_taste(nfc_device *device, nfc_target target);
bool		 mifare_ultralightc_taste(nfc_device *device, nfc_target target);
FreefareTag	 mifare_ultralight_tag_new(nfc_device *device, nfc_target target);
FreefareTag	 mifare_ultralightc_tag_new(nfc_device *device, nfc_target target);
void		 mifare_ultralight_tag_free(FreefareTag tag);
void		 mifare_ultralightc_tag_free(FreefareTag tag);
int		 mifare_ultralight_connect(FreefareTag tag);
int		 mifare_ultralight_disconnect(FreefareTag tag);
int		 mifare_ultralight_read(FreefareTag tag, const MifareUltralightPageNumber page, MifareUltralightPage *data);
int		 mifare_ultralight_write(FreefareTag tag, const MifareUltralightPageNumber page, const MifareUltralightPage data);
int		 mifare_ultralightc_authenticate(FreefareTag tag, const MifareDESFireKey key);
int		 mifare_ultralightc_set_key(FreefareTag tag, MifareDESFireKey key);
bool		 is_mifare_ultralight(FreefareTag tag);
bool		 is_mifare_ultralightc(FreefareTag tag);
bool		 is_mifare_ultralightc_on_reader(nfc_device *device, nfc_iso14443a_info nai);


bool		 ntag21x_taste(nfc_device *device, nfc_target target);
uint8_t		 ntag21x_last_error(FreefareTag tag);
enum ntag_tag_subtype {
    NTAG_UNKNOWN,
    NTAG_213,
    NTAG_215,
    NTAG_216
};
FreefareTag	 ntag21x_tag_new(nfc_device *device, nfc_target target);
FreefareTag	 ntag21x_tag_reuse(FreefareTag tag);  /* Copy data from Ultralight tag to new NTAG21x, don't forget to free your old tag */
NTAG21xKey	 ntag21x_key_new(const uint8_t data[4], const uint8_t pack[2]); /* Create new key */
void		 ntag21x_key_free(NTAG21xKey key);  /* Clear key from memory */
void		 ntag21x_tag_free(FreefareTag tag);
int		 ntag21x_connect(FreefareTag tag);
int		 ntag21x_disconnect(FreefareTag tag);
int		 ntag21x_get_info(FreefareTag tag);  /* Get all information about tag (size,vendor ...) */
enum  ntag_tag_subtype ntag21x_get_subtype(FreefareTag tag);  /* Get subtype of tag */
uint8_t		 ntag21x_get_last_page(FreefareTag tag);  /* Get last page address based on gathered info from function above */
int		 ntag21x_read_signature(FreefareTag tag, uint8_t *data); /* Get tag signature */
int		 ntag21x_set_pwd(FreefareTag tag, uint8_t data[4]);  /* Set password */
int		 ntag21x_set_pack(FreefareTag tag, uint8_t data[2]);  /* Set pack */
int		 ntag21x_set_key(FreefareTag tag, const NTAG21xKey key); /* Set key */
int		 ntag21x_set_auth(FreefareTag tag, uint8_t byte); /* Set AUTH0 byte (from which page starts password protection) */
int		 ntag21x_get_auth(FreefareTag tag, uint8_t *byte); /* Get AUTH0 byte */
int		 ntag21x_access_enable(FreefareTag tag, uint8_t byte); /* Enable access feature in ACCESS byte */
int		 ntag21x_access_disable(FreefareTag tag, uint8_t byte); /* Disable access feature in ACCESS byte */
int		 ntag21x_get_access(FreefareTag tag, uint8_t *byte); /* Get ACCESS byte */
int		 ntag21x_check_access(FreefareTag tag, uint8_t byte, bool *result); /* Check if access feature is enabled */
int		 ntag21x_get_authentication_limit(FreefareTag tag, uint8_t *byte); /* Get authentication limit */
int		 ntag21x_set_authentication_limit(FreefareTag tag, uint8_t byte); /* Set authentication limit (0x00 = disabled, [0x01,0x07] = valid range, > 0x07 invalid range) */
int		 ntag21x_read(FreefareTag tag, uint8_t page, uint8_t *data); /* Read 16 bytes starting from page */
int		 ntag21x_read4(FreefareTag tag, uint8_t page, uint8_t *data); /* Read 4 bytes on page */
int		 ntag21x_fast_read(FreefareTag tag, uint8_t start_page, uint8_t end_page, uint8_t *data); /* Read n*4 bytes from range [start_page,end_page] */
int		 ntag21x_fast_read4(FreefareTag tag, uint8_t page, uint8_t *data); /* Fast read certain page */
int		 ntag21x_read_cnt(FreefareTag tag, uint8_t *data);  /* Read 3-byte NFC counter if enabled else it returns error */
int		 ntag21x_write(FreefareTag tag, uint8_t page, uint8_t data[4]);  /* Write 4 bytes to page */
int		 ntag21x_compatibility_write(FreefareTag tag, uint8_t page, uint8_t data[4]);  /* Writes 4 bytes to page with mifare classic write */
int		 ntag21x_authenticate(FreefareTag tag, const NTAG21xKey key);  /* Authenticate with tag */
bool		 is_ntag21x(FreefareTag tag);  /* Check if tag type is NTAG21x */
bool		 ntag21x_is_auth_supported(nfc_device *device, nfc_iso14443a_info nai);  /* Check if tag supports 21x commands */


bool             mifare_mini_taste(nfc_device *device, nfc_target target);
bool		 mifare_classic1k_taste(nfc_device *device, nfc_target target);
bool		 mifare_classic4k_taste(nfc_device *device, nfc_target target);
FreefareTag      mifare_mini_tag_new(nfc_device *device, nfc_target target);
FreefareTag	 mifare_classic1k_tag_new(nfc_device *device, nfc_target target);
FreefareTag	 mifare_classic4k_tag_new(nfc_device *device, nfc_target target);
void		 mifare_classic_tag_free(FreefareTag tag);
typedef unsigned char MifareClassicBlock[16];
typedef uint8_t MifareClassicSectorNumber;
typedef unsigned char MifareClassicBlockNumber;
typedef enum { MFC_KEY_A, MFC_KEY_B } MifareClassicKeyType;
typedef unsigned char MifareClassicKey[6];
/* NFC Forum public key */
extern const MifareClassicKey mifare_classic_nfcforum_public_key_a;
int		 mifare_classic_connect(FreefareTag tag);
int		 mifare_classic_disconnect(FreefareTag tag);
int		 mifare_classic_authenticate(FreefareTag tag, const MifareClassicBlockNumber block, const MifareClassicKey key, const MifareClassicKeyType key_type);
int		 mifare_classic_read(FreefareTag tag, const MifareClassicBlockNumber block, MifareClassicBlock *data);
int		 mifare_classic_init_value(FreefareTag tag, const MifareClassicBlockNumber block, const int32_t value, const MifareClassicBlockNumber adr);
int		 mifare_classic_read_value(FreefareTag tag, const MifareClassicBlockNumber block, int32_t *value, MifareClassicBlockNumber *adr);
int		 mifare_classic_write(FreefareTag tag, const MifareClassicBlockNumber block, const MifareClassicBlock data);
int		 mifare_classic_increment(FreefareTag tag, const MifareClassicBlockNumber block, const uint32_t amount);
int		 mifare_classic_decrement(FreefareTag tag, const MifareClassicBlockNumber block, const uint32_t amount);
int		 mifare_classic_restore(FreefareTag tag, const MifareClassicBlockNumber block);
int		 mifare_classic_transfer(FreefareTag tag, const MifareClassicBlockNumber block);
int		 mifare_classic_get_trailer_block_permission(FreefareTag tag, const MifareClassicBlockNumber block, const uint16_t permission, const MifareClassicKeyType key_type);
int		 mifare_classic_get_data_block_permission(FreefareTag tag, const MifareClassicBlockNumber block, const unsigned char permission, const MifareClassicKeyType key_type);
int		 mifare_classic_format_sector(FreefareTag tag, const MifareClassicSectorNumber sector);
void		 mifare_classic_trailer_block(MifareClassicBlock *block, const MifareClassicKey key_a, uint8_t ab_0, uint8_t ab_1, uint8_t ab_2, uint8_t ab_tb, const uint8_t gpb, const MifareClassicKey key_b);
MifareClassicSectorNumber mifare_classic_block_sector(MifareClassicBlockNumber block);
MifareClassicBlockNumber  mifare_classic_sector_first_block(MifareClassicSectorNumber sector);
size_t		 mifare_classic_sector_block_count(MifareClassicSectorNumber sector);
MifareClassicBlockNumber  mifare_classic_sector_last_block(MifareClassicSectorNumber sector);
struct mad_aid {
    uint8_t application_code;
    uint8_t function_cluster_code;
};
typedef struct mad_aid MadAid;
struct mad;
typedef struct mad *Mad;
/* MAD Public read key A */
extern const MifareClassicKey mad_public_key_a;
/* AID - Adminisration codes */
extern const MadAid mad_free_aid;
extern const MadAid mad_defect_aid;
extern const MadAid mad_reserved_aid;
extern const MadAid mad_card_holder_aid;
extern const MadAid mad_not_applicable_aid;
/* NFC Forum AID */
extern const MadAid mad_nfcforum_aid;
Mad		 mad_new(const uint8_t version);
Mad		 mad_read(FreefareTag tag);
int		 mad_write(FreefareTag tag, Mad mad, const MifareClassicKey key_b_sector_00, const MifareClassicKey key_b_sector_10);
int		 mad_get_version(Mad mad);
void		 mad_set_version(Mad mad, const uint8_t version);
MifareClassicSectorNumber mad_get_card_publisher_sector(Mad mad);
int		 mad_set_card_publisher_sector(Mad mad, const MifareClassicSectorNumber cps);
int		 mad_get_aid(Mad mad, const MifareClassicSectorNumber sector, MadAid *aid);
int		 mad_set_aid(Mad mad, const MifareClassicSectorNumber sector, MadAid aid);
bool		 mad_sector_reserved(const MifareClassicSectorNumber sector);
void		 mad_free(Mad mad);
MifareClassicSectorNumber *mifare_application_alloc(Mad mad, const MadAid aid, const size_t size);
ssize_t		 mifare_application_read(FreefareTag tag, Mad mad, const MadAid aid, void *buf, size_t nbytes, const MifareClassicKey key, const MifareClassicKeyType key_type);
ssize_t		 mifare_application_write(FreefareTag tag, Mad mad, const MadAid aid, const void *buf, size_t nbytes, const MifareClassicKey key, const MifareClassicKeyType key_type);
int		 mifare_application_free(Mad mad, const MadAid aid);
MifareClassicSectorNumber *mifare_application_find(Mad mad, const MadAid aid);


bool		 mifare_desfire_taste(nfc_device *device, nfc_target target);
/* File types */

enum mifare_desfire_file_types {
    MDFT_STANDARD_DATA_FILE             = 0x00,
    MDFT_BACKUP_DATA_FILE               = 0x01,
    MDFT_VALUE_FILE_WITH_BACKUP         = 0x02,
    MDFT_LINEAR_RECORD_FILE_WITH_BACKUP = 0x03,
    MDFT_CYCLIC_RECORD_FILE_WITH_BACKUP = 0x04
};
/* Status and error codes */

#define	OPERATION_OK		0x00
#define	NO_CHANGES		0x0C
#define	OUT_OF_EEPROM_ERROR	0x0E
#define	ILLEGAL_COMMAND_CODE	0x1C
#define	INTEGRITY_ERROR		0x1E
#define	NO_SUCH_KEY		0x40
#define	LENGTH_ERROR		0x7E
#define	PERMISSION_ERROR	0x9D
#define	PARAMETER_ERROR		0x9E
#define	APPLICATION_NOT_FOUND	0xA0
#define	APPL_INTEGRITY_ERROR	0xA1
#define	AUTHENTICATION_ERROR	0xAE
#define	ADDITIONAL_FRAME	0xAF
#define	BOUNDARY_ERROR		0xBE
#define	PICC_INTEGRITY_ERROR	0xC1
#define	COMMAND_ABORTED		0xCA
#define	PICC_DISABLED_ERROR	0xCD
#define	COUNT_ERROR		0xCE
#define	DUPLICATE_ERROR		0xDE
#define	EEPROM_ERROR		0xEE
#define	FILE_NOT_FOUND		0xF0
#define	FILE_INTEGRITY_ERROR	0xF1
struct mifare_desfire_aid;
typedef struct mifare_desfire_aid *MifareDESFireAID;
struct mifare_desfire_df {
    uint32_t aid;
    uint16_t fid;
    uint8_t df_name[16];
    size_t df_name_len;
};
typedef struct mifare_desfire_df MifareDESFireDF;
MifareDESFireAID mifare_desfire_aid_new(uint32_t aid);
typedef enum mifare_key_type {
    MIFARE_KEY_DES,
    MIFARE_KEY_2K3DES,
    MIFARE_KEY_3K3DES,
    MIFARE_KEY_AES128,

    MIFARE_KEY_LAST = MIFARE_KEY_AES128
} MifareKeyType;