python/pyfreefare/libfreefare.pxd

from libc.stdint cimport uint8_t, uint32_t, uint16_t, int32_t
from posix.types cimport off_t
from libnfc cimport nfc_device, nfc_target, nfc_iso14443a_info

cdef extern from *:
   ctypedef unsigned char c_bool "bool"

cdef extern from "freefare.h":
    cpdef enum mifare_key_type:
        MIFARE_KEY_DES
        MIFARE_KEY_2K3DES
        MIFARE_KEY_3K3DES
        MIFARE_KEY_AES128
    ctypedef mifare_key_type MifareKeyType

    cpdef enum freefare_tag_type:
        FELICA
        MIFARE_MINI
        MIFARE_CLASSIC_1K
        MIFARE_CLASSIC_4K
        MIFARE_DESFIRE
        MIFARE_ULTRALIGHT
        MIFARE_ULTRALIGHT_C
        NTAG_21x

    cdef struct freefare_tag
    ctypedef freefare_tag* FreefareTag

    cdef struct mifare_desfire_key
    ctypedef mifare_desfire_key* MifareDESFireKey

    cdef struct ntag21x_key

    ctypedef ntag21x_key* NTAG21xKey

    ctypedef uint8_t MifareUltralightPageNumber

    ctypedef unsigned char MifareUltralightPage[4]

    FreefareTag* freefare_get_tags(nfc_device* device)

    FreefareTag freefare_tag_new(nfc_device* device, nfc_target target)

    freefare_tag_type freefare_get_tag_type(FreefareTag tag)

    const char* freefare_get_tag_friendly_name(FreefareTag tag)

    char* freefare_get_tag_uid(FreefareTag tag)

    int freefare_get_tag_uid_raw(FreefareTag tag, uint8_t** uid)

    nfc_target* freefare_get_tag_target(FreefareTag tag)

    void freefare_free_tag(FreefareTag tag)

    void freefare_free_tags(FreefareTag* tags)

    bint freefare_selected_tag_is_present(nfc_device* device)

    void freefare_set_tag_timeout(FreefareTag tag, int timeout)

    const char* freefare_version()

    const char* freefare_strerror(FreefareTag tag)

    int freefare_strerror_r(FreefareTag tag, char* buffer, size_t len)

    void freefare_perror(FreefareTag tag, const char* string)

    bint felica_taste(nfc_device* device, nfc_target target)

    FreefareTag felica_tag_new(nfc_device* device, nfc_target target)

    void felica_tag_free(FreefareTag tag)

    ssize_t felica_read(FreefareTag tag, uint16_t service, uint8_t block, uint8_t* data, size_t length)

    ssize_t felica_read_ex(FreefareTag tag, uint16_t service, uint8_t block_count, uint8_t blocks[], uint8_t* data, size_t length)

    ssize_t felica_write(FreefareTag tag, uint16_t service, uint8_t block, uint8_t* data, size_t length)

    ssize_t felica_write_ex(FreefareTag tag, uint16_t service, uint8_t block_count, uint8_t blocks[], uint8_t* data, size_t length)

    bint mifare_ultralight_taste(nfc_device* device, nfc_target target)

    bint mifare_ultralightc_taste(nfc_device* device, nfc_target target)

    FreefareTag mifare_ultralight_tag_new(nfc_device* device, nfc_target target)

    FreefareTag mifare_ultralightc_tag_new(nfc_device* device, nfc_target target)

    void mifare_ultralight_tag_free(FreefareTag tag)

    void mifare_ultralightc_tag_free(FreefareTag tag)

    int mifare_ultralight_connect(FreefareTag tag)

    int mifare_ultralight_disconnect(FreefareTag tag)

    int mifare_ultralight_read(FreefareTag tag, const MifareUltralightPageNumber page, MifareUltralightPage* data)

    int mifare_ultralight_write(FreefareTag tag, const MifareUltralightPageNumber page, const MifareUltralightPage data)

    int mifare_ultralightc_authenticate(FreefareTag tag, const MifareDESFireKey key)

    int mifare_ultralightc_set_key(FreefareTag tag, MifareDESFireKey key)

    bint is_mifare_ultralight(FreefareTag tag)

    bint is_mifare_ultralightc(FreefareTag tag)

    bint is_mifare_ultralightc_on_reader(nfc_device* device, nfc_iso14443a_info nai)

    bint ntag21x_taste(nfc_device* device, nfc_target target)

    uint8_t ntag21x_last_error(FreefareTag tag)

    cdef enum ntag_tag_subtype:
        NTAG_UNKNOWN
        NTAG_213
        NTAG_215
        NTAG_216

    FreefareTag ntag21x_tag_new(nfc_device* device, nfc_target target)

    FreefareTag ntag21x_tag_reuse(FreefareTag tag)

    NTAG21xKey ntag21x_key_new(const uint8_t data[4], const uint8_t pack[2])

    void ntag21x_key_free(NTAG21xKey key)

    void ntag21x_tag_free(FreefareTag tag)

    int ntag21x_connect(FreefareTag tag)

    int ntag21x_disconnect(FreefareTag tag)

    int ntag21x_get_info(FreefareTag tag)

    ntag_tag_subtype ntag21x_get_subtype(FreefareTag tag)

    uint8_t ntag21x_get_last_page(FreefareTag tag)

    int ntag21x_read_signature(FreefareTag tag, uint8_t* data)

    int ntag21x_set_pwd(FreefareTag tag, uint8_t data[4])

    int ntag21x_set_pack(FreefareTag tag, uint8_t data[2])

    int ntag21x_set_key(FreefareTag tag, const NTAG21xKey key)

    int ntag21x_set_auth(FreefareTag tag, uint8_t byte)

    int ntag21x_get_auth(FreefareTag tag, uint8_t* byte)

    int ntag21x_access_enable(FreefareTag tag, uint8_t byte)

    int ntag21x_access_disable(FreefareTag tag, uint8_t byte)

    int ntag21x_get_access(FreefareTag tag, uint8_t* byte)

    int ntag21x_check_access(FreefareTag tag, uint8_t byte, c_bool* result)

    int ntag21x_get_authentication_limit(FreefareTag tag, uint8_t* byte)

    int ntag21x_set_authentication_limit(FreefareTag tag, uint8_t byte)

    int ntag21x_read(FreefareTag tag, uint8_t page, uint8_t* data)

    int ntag21x_read4(FreefareTag tag, uint8_t page, uint8_t* data)

    int ntag21x_fast_read(FreefareTag tag, uint8_t start_page, uint8_t end_page, uint8_t* data)

    int ntag21x_fast_read4(FreefareTag tag, uint8_t page, uint8_t* data)

    int ntag21x_read_cnt(FreefareTag tag, uint8_t* data)

    int ntag21x_write(FreefareTag tag, uint8_t page, uint8_t data[4])

    int ntag21x_compatibility_write(FreefareTag tag, uint8_t page, uint8_t data[4])

    int ntag21x_authenticate(FreefareTag tag, const NTAG21xKey key)

    bint is_ntag21x(FreefareTag tag)

    bint ntag21x_is_auth_supported(nfc_device* device, nfc_iso14443a_info nai)

    bint mifare_mini_taste(nfc_device* device, nfc_target target)

    bint mifare_classic1k_taste(nfc_device* device, nfc_target target)

    bint mifare_classic4k_taste(nfc_device* device, nfc_target target)

    FreefareTag mifare_mini_tag_new(nfc_device* device, nfc_target target)

    FreefareTag mifare_classic1k_tag_new(nfc_device* device, nfc_target target)

    FreefareTag mifare_classic4k_tag_new(nfc_device* device, nfc_target target)

    void mifare_classic_tag_free(FreefareTag tag)

    ctypedef unsigned char[16] MifareClassicBlock

    ctypedef uint8_t MifareClassicSectorNumber

    ctypedef unsigned char MifareClassicBlockNumber

    ctypedef enum MifareClassicKeyType:
        MFC_KEY_A
        MFC_KEY_B

    ctypedef unsigned char MifareClassicKey[6]

    const MifareClassicKey mifare_classic_nfcforum_public_key_a

    int mifare_classic_connect(FreefareTag tag)

    int mifare_classic_disconnect(FreefareTag tag)

    int mifare_classic_authenticate(FreefareTag tag, const MifareClassicBlockNumber block, const MifareClassicKey key, const MifareClassicKeyType key_type)

    int mifare_classic_read(FreefareTag tag, const MifareClassicBlockNumber block, MifareClassicBlock* data)

    int mifare_classic_init_value(FreefareTag tag, const MifareClassicBlockNumber block, const int32_t value, const MifareClassicBlockNumber adr)

    int mifare_classic_read_value(FreefareTag tag, const MifareClassicBlockNumber block, int32_t* value, MifareClassicBlockNumber* adr)

    int mifare_classic_write(FreefareTag tag, const MifareClassicBlockNumber block, const MifareClassicBlock data)

    int mifare_classic_increment(FreefareTag tag, const MifareClassicBlockNumber block, const uint32_t amount)

    int mifare_classic_decrement(FreefareTag tag, const MifareClassicBlockNumber block, const uint32_t amount)

    int mifare_classic_restore(FreefareTag tag, const MifareClassicBlockNumber block)

    int mifare_classic_transfer(FreefareTag tag, const MifareClassicBlockNumber block)

    int mifare_classic_get_trailer_block_permission(FreefareTag tag, const MifareClassicBlockNumber block, const uint16_t permission, const MifareClassicKeyType key_type)

    int mifare_classic_get_data_block_permission(FreefareTag tag, const MifareClassicBlockNumber block, const unsigned char permission, const MifareClassicKeyType key_type)

    int mifare_classic_format_sector(FreefareTag tag, const MifareClassicSectorNumber sector)

    void mifare_classic_trailer_block(MifareClassicBlock* block, const MifareClassicKey key_a, uint8_t ab_0, uint8_t ab_1, uint8_t ab_2, uint8_t ab_tb, const uint8_t gpb, const MifareClassicKey key_b)

    MifareClassicSectorNumber mifare_classic_block_sector(MifareClassicBlockNumber block)

    MifareClassicBlockNumber mifare_classic_sector_first_block(MifareClassicSectorNumber sector)

    size_t mifare_classic_sector_block_count(MifareClassicSectorNumber sector)

    MifareClassicBlockNumber mifare_classic_sector_last_block(MifareClassicSectorNumber sector)

    cdef struct mad_aid:
        uint8_t application_code
        uint8_t function_cluster_code

    ctypedef mad_aid MadAid

    cdef struct mad

    ctypedef mad* Mad

    const MifareClassicKey mad_public_key_a

    const MadAid mad_free_aid

    const MadAid mad_defect_aid

    const MadAid mad_reserved_aid

    const MadAid mad_card_holder_aid

    const MadAid mad_not_applicable_aid

    const MadAid mad_nfcforum_aid

    Mad mad_new(const uint8_t version)

    Mad mad_read(FreefareTag tag)

    int mad_write(FreefareTag tag, Mad mad, const MifareClassicKey key_b_sector_00, const MifareClassicKey key_b_sector_10)

    int mad_get_version(Mad mad)

    void mad_set_version(Mad mad, const uint8_t version)

    MifareClassicSectorNumber mad_get_card_publisher_sector(Mad mad)

    int mad_set_card_publisher_sector(Mad mad, const MifareClassicSectorNumber cps)

    int mad_get_aid(Mad mad, const MifareClassicSectorNumber sector, MadAid* aid)

    int mad_set_aid(Mad mad, const MifareClassicSectorNumber sector, MadAid aid)

    bint mad_sector_reserved(const MifareClassicSectorNumber sector)

    void mad_free(Mad mad)

    MifareClassicSectorNumber* mifare_application_alloc(Mad mad, const MadAid aid, const size_t size)

    ssize_t mifare_application_read(FreefareTag tag, Mad mad, const MadAid aid, void* buf, size_t nbytes, const MifareClassicKey key, const MifareClassicKeyType key_type)

    ssize_t mifare_application_write(FreefareTag tag, Mad mad, const MadAid aid, const void* buf, size_t nbytes, const MifareClassicKey key, const MifareClassicKeyType key_type)

    int mifare_application_free(Mad mad, const MadAid aid)

    MifareClassicSectorNumber* mifare_application_find(Mad mad, const MadAid aid)

    bint mifare_desfire_taste(nfc_device* device, nfc_target target)

    cpdef enum mifare_desfire_file_types:
        MDFT_STANDARD_DATA_FILE
        MDFT_BACKUP_DATA_FILE
        MDFT_VALUE_FILE_WITH_BACKUP
        MDFT_LINEAR_RECORD_FILE_WITH_BACKUP
        MDFT_CYCLIC_RECORD_FILE_WITH_BACKUP

    cdef const int OPERATION_OK
    cdef const int NO_CHANGES
    cdef const int OUT_OF_EEPROM_ERROR
    cdef const int ILLEGAL_COMMAND_CODE
    cdef const int INTEGRITY_ERROR
    cdef const int NO_SUCH_KEY
    cdef const int LENGTH_ERROR
    cdef const int PERMISSION_ERROR
    cdef const int PARAMETER_ERROR
    cdef const int APPLICATION_NOT_FOUND
    cdef const int APPL_INTEGRITY_ERROR
    cdef const int AUTHENTICATION_ERROR
    cdef const int ADDITIONAL_FRAME
    cdef const int BOUNDARY_ERROR
    cdef const int PICC_INTEGRITY_ERROR
    cdef const int COMMAND_ABORTED
    cdef const int PICC_DISABLED_ERROR
    cdef const int COUNT_ERROR
    cdef const int DUPLICATE_ERROR
    cdef const int EEPROM_ERROR
    cdef const int FILE_NOT_FOUND
    cdef const int FILE_INTEGRITY_ERROR

    cdef struct mifare_desfire_aid

    ctypedef mifare_desfire_aid* MifareDESFireAID

    cdef struct mifare_desfire_df:
        uint32_t aid
        uint16_t fid
        uint8_t df_name[16]
        size_t df_name_len

    ctypedef mifare_desfire_df MifareDESFireDF

    MifareDESFireAID mifare_desfire_aid_new(uint32_t aid)
